@@ -1,2 +1,6 @@
-CATALINA_OPTS="$CATALINA_OPTS -Dfile.encoding=UTF8 -Djava.net.preferIPv4Stack=true -Dorg.apache.catalina.loader.WebappClassLoader.ENABLE_CLEAR_REFERENCES=false -Duser.timezone=GMT -Xms10G -Xmx10G -XX:PermSize=1024m -XX:MaxPermSize=1024m -XX:+DisableExplicitGC"
+export CATALINA_OPTS="$CATALINA_OPTS -Xms25600m"
+export CATALINA_OPTS="$CATALINA_OPTS -Xmx25600m"
+export CATALINA_OPTS="$CATALINA_OPTS -XX:MaxPermSize=1024m"
+
+CATALINA_OPTS="$CATALINA_OPTS -Dfile.encoding=UTF8 -Djava.net.preferIPv4Stack=true -Dorg.apache.catalina.loader.WebappClassLoader.ENABLE_CLEAR_REFERENCES=false -Duser.timezone=GMT"
 CATALINA_OPTS="${CATALINA_OPTS} ${LIFERAY_JVM_OPTS}"
